# quantum-algorithm-explorer

./: .gitignore  README.md  pyproject.toml
src/: cli.py  config.py  orchestrator.py
src/agents/: research_agent.py  simulation_agent.py
src/circuits/: bernstein_vazirani.py  deutsch_jozsa.py  grover.py  qaoa.py  qft.py  vqe.py
src/models/: schemas.py
src/report/: generator.py  templates.py
src/tools/: algorithm_catalog.py  circuit_runner.py  complexity_compare.py
tests/: test_circuits.py  test_tools.py
